<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartureShowFlightInfoActivity">
    <TextView
        android:id="@+id/tv_depFlightInfoDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/demo_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_depFlightInfoTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/demo_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_depFlightInfoDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_depFlightInfoDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/demo_place"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_depFlightInfoDate" />

    <TextView
        android:id="@+id/tv_depFlightInfoFlightNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/demo_flight_no"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_depFlightInfoDest" />

    <TextView
        android:id="@+id/tv_depFlightInfoAirline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/demo_airline"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_depFlightInfoFlightNo" />

    <TextView
        android:id="@+id/label_departure_aisle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/aisle"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/label_departure_terminal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_depFlightInfoAirline" />

    <TextView
        android:id="@+id/label_departure_terminal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/terminal"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/label_departure_gate"
        app:layout_constraintStart_toEndOf="@+id/label_departure_aisle"
        app:layout_constraintTop_toBottomOf="@+id/tv_depFlightInfoAirline" />

    <TextView
        android:id="@+id/label_departure_gate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gate"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_departure_terminal"
        app:layout_constraintTop_toBottomOf="@+id/tv_depFlightInfoAirline" />

    <TextView
        android:id="@+id/tv_depFlightInfoAisle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/demo_aisle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/label_departure_aisle"
        app:layout_constraintStart_toStartOf="@+id/label_departure_aisle"
        app:layout_constraintTop_toBottomOf="@+id/label_departure_aisle" />

    <TextView
        android:id="@+id/tv_depFlightInfoTerminal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/demo_terminal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/label_departure_terminal"
        app:layout_constraintStart_toStartOf="@+id/label_departure_terminal"
        app:layout_constraintTop_toBottomOf="@+id/label_departure_terminal" />

    <TextView
        android:id="@+id/tv_depFlightInfoGate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/demo_gate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/label_departure_gate"
        app:layout_constraintStart_toStartOf="@+id/label_departure_gate"
        app:layout_constraintTop_toBottomOf="@+id/label_departure_gate" />

    <TextView
        android:id="@+id/label_departure_predict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_predict"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_depFlightInfoAisle" />

    <TextView
        android:id="@+id/tv_depFlightInfoPredict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/demo_predict_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/label_departure_predict"
        app:layout_constraintTop_toBottomOf="@+id/tv_depFlightInfoAisle" />

    <Button
        android:id="@+id/btn_depFlightInfoPredict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/royal_blue"
        android:text="@string/predict"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_depFlightInfoPredict" />
</androidx.constraintlayout.widget.ConstraintLayout>